# ADPitch

./: .env.example  .gitignore  README.md
api-server/: README.md  requirements.txt
api-server/src/: app.py
dashboard/: README.md  package-lock.json  package.json
dashboard/src/api/: client.js
dashboard/src/app/: globals.css  layout-shell.tsx
dashboard/src/components/crm/: ClientList.tsx  StatsCharts.tsx
dashboard/src/lib/: api.ts
insights-engine/: README.md
insights-engine/src/: analyzer.py
presage-capture/: CMakeLists.txt  README.md
presage-capture/include/: db_writer.h  metrics_callback.h
presage-capture/scripts/: install_sdk.sh
presage-capture/src/: db_writer.cpp  main.cpp  metrics_callback.cpp
sales-insight-rebuilt/src/app/: layout.tsx
sales-insight-rebuilt/src/app/clients/: page.tsx
sales-insight-rebuilt/src/app/clients/[id]/: page.tsx
sales-insight-rebuilt/src/components/crm/: MeetingHistoryList.tsx  ProfileHeader.tsx  TranscriptViewer.tsx
shared/: config.py  models.py
sync-engine/: README.md  requirements.txt
sync-engine/src/: db_manager.py  init_db.py  schema.sql
sync_engine/data/: adpitch.db
sync_engine/src/: check_db.py  init_db.py
transcription/: README.md  requirements.txt
transcription/recordings/: audio.py
transcription/src/: batch_transcriber.py  realtime_transcriber.py
